<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_light"
    tools:context=".Register">

    <View
        android:id="@+id/topViewRegister"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:background="@color/primary_color"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvTitleRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:text="@string/quiz_security"
        android:textColor="@color/white"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="-40dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="8dp"
        app:layout_constraintTop_toBottomOf="@+id/topViewRegister">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="24dp">

            <TextView
                android:id="@+id/tvSubtitleRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/registration"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="30dp"
                android:text="@string/register_subtitle"
                android:textColor="@color/gray_700"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/etEmailRegister"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/edittext_rounded"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"
                android:paddingStart="15dp" />

            <EditText
                android:id="@+id/etPasswordRegister"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginBottom="30dp"
                android:background="@drawable/edittext_rounded"
                android:hint="@string/password_hint"
                android:inputType="textPassword"
                android:paddingStart="15dp" />

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:backgroundTint="@color/primary_color"
                android:text="@string/register_btn"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:cornerRadius="12dp" />

            <TextView
                android:id="@+id/tvToLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/already_account"
                android:textColor="@color/primary_color"
                android:textStyle="bold" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>